# imdb_api

./: .gitignore  Pipfile  README.md  database.py  download_tsv.py  flask_app.py  import_tsv_files.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
