[tool.poetry]
name = "imdb_api"
version = "0.1.0"
description = ""
authors = ["Artur H. Lange <ArturLange@poczta.fm>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
psycopg2 = "^2.9.2"
pip = "^21.3.1"
SQLAlchemy = "^1.4.29"
Flask = "^2.0.2"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
